--- a/courses/ProbasEfreiS3/exos1.html
+++ b/courses/ProbasEfreiS3/exos1.html
@@ -163,8 +163,6 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#probabilit%C3%A9" id="toc-probabilité" class="nav-link" data-scroll-target="#probabilit%C3%A9">Probabilité</a></li>
   <li><a href="#bayes" id="toc-bayes" class="nav-link" data-scroll-target="#bayes">Bayes</a></li>
   <li><a href="#variables-al%C3%A9atoires-discr%C3%A8tes" id="toc-variables-aléatoires-discrètes" class="nav-link" data-scroll-target="#variables-al%C3%A9atoires-discr%C3%A8tes">Variables aléatoires discrètes</a></li>
-  <li><a href="#lois-usuelles-discr%C3%A8tes" id="toc-lois-usuelles-discrètes" class="nav-link" data-scroll-target="#lois-usuelles-discr%C3%A8tes">Lois usuelles discrètes</a></li>
-  <li><a href="#exercices-suppl%C3%A9mentaires" id="toc-exercices-supplémentaires" class="nav-link" data-scroll-target="#exercices-suppl%C3%A9mentaires">Exercices supplémentaires</a></li>
   </ul></nav>
     </div>
 <!-- main -->
@@ -430,104 +428,164 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Les variables <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont elles indépendantes ?</p></li>
 </ol>
 </div>
-</section><section id="lois-usuelles-discrètes" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="lois-usuelles-discrètes">Lois usuelles discrètes</h2>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 19 </strong></span>Une urne contient 2 boules de numéro 20, 4 boules de numéro 10 et 4 boules de numéro 5.</p>
-<ol type="1">
-<li><p>Une épreuve consiste à tirer simultanément 3 boules de l’urne. Calculer la probabilité <span class="math inline">\(p\)</span> que la somme des numéros tirés soit égale à 30.</p></li>
-<li>
-<p>On répéte cette épreuve 4 fois en remettant à chaque fois les trois boules tirés dans l’urne. Soit <span class="math inline">\(X\)</span> la v.a. indiquant le nombre de tirages donnant une somme de numéros égale à 30.</p>
-<ol type="1">
-<li><p>Quelle la loi de <span class="math inline">\(X\)</span>. Donner son espérance et son écart-type.</p></li>
-<li><p>Déterminer la probabilité d’avoir au moins une fois la somme 30 dans les 4 tirages.</p></li>
-</ol>
-</li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 20 </strong></span>Vous avez besoin d’une personne pour vous aider à déménager. Quand vous téléphonez à un ami, il y a une chance sur quatre qu’il accepte. Soit <span class="math inline">\(X\)</span> la variable aléatoire qui représente le nombre d’amis que vous devrez contacter pour obtenir cette aide.</p>
-<ol type="1">
-<li><p>Déterminer la loi de probabilité de <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(P(X\leq 3)\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(E(X)\)</span>.</p></li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 21 </strong></span>Pour être sélectionné aux jeux olympiques, un athlète doit réussir deux fois à dépasser les minima fixés par sa fédération. Il a une chance sur trois de réussir à chaque épreuve à laquelle il participe. On note <span class="math inline">\(X\)</span> la variable aléatoire qui représente le nombre d’épreuves auxquelles il devra participer pour être sélectionné.</p>
-<ol type="1">
-<li><p>Déterminer la loi de probabilité de <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Si cet athlète ne peut participer qu’à quatre épreuves maximum, quelle est la probabilité qu’il soit sélectionné ?</p></li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 22 </strong></span>Un sac contient cinq jetons : deux sont numérotés 1 et les trois autres sont numérotés 2. On effectue une série illimitée de tirages avec remise d’un jeton dans le sac S. On désigne par <span class="math inline">\(Y\)</span> la variable aléatoire égale au nombre de tirages effectués avant le tirage amenant un jeton numéroté 1 pour la première fois.</p>
-<ol type="1">
-<li><ol type="1">
-<li><p>Justifier que la variable aléatoire <span class="math inline">\(Z=Y+1\)</span> suit une loi usuelle que l’on précisera.</p></li>
-<li><p>En déduire la loi de probabilité de <span class="math inline">\(Y\)</span>.</p></li>
-</ol></li>
-<li><ol type="1">
-<li><p>Préciser l’espérance mathématique et la variance de <span class="math inline">\(Z\)</span>.</p></li>
-<li><p>En déduire l’espérance mathématique et la variance de <span class="math inline">\(Y\)</span>.</p></li>
-</ol></li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 23 </strong></span>Le nombre de pannes d’électricité qui se produisent dans une certaine région au cours d’une période d’un an suit une loi de Poisson de paramètre <span class="math inline">\(\lambda=3\)</span>.</p>
-<ol type="1">
-<li><p>Calculer la probabilité qu’au cours d’une période d’un an il y a exactement une panne qui se produit.</p></li>
-<li><p>En supposant l’indépendance des pannes d’une année à l’autre, calculer la probabilité qu’au cours des dix prochaines années il y ait au moins une année pendant laquelle il se produira exactement une panne.</p></li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 24 </strong></span>Un poste de radio a 2 types de pannes: transistor ou condensateur. Durant la première année d’utilisation, on désigne par:</p>
-<p><span class="math inline">\(X=\)</span> nombre de pannes dues à une défaillance de transistor.<br><span class="math inline">\(Y=\)</span> nombre de pannes dues à une défaillance de condensateur.</p>
-<p>On suppose que <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont des v.a. indépendantes suivant des lois de Poisson de paramètres respectives <span class="math inline">\(\lambda=2\)</span> et <span class="math inline">\(\mu=1\)</span>.</p>
-<ol type="1">
-<li><p>Calculer la probabilité qu’il y ait 2 pannes dues à une défaillance de transistor.</p></li>
-<li><p>Calculer la probabilité qu’il y ait au moins une panne due à une défaillance de condensateur.</p></li>
-<li><ol type="1">
-<li><p>Quelle est la loi du nombre <span class="math inline">\(Z=X+Y\)</span> de pannes durant la première année ?</p></li>
-<li><p>Déterminer la probabilité qu’il y ait 2 pannes de type quelconque.</p></li>
-<li><p>Calculer <span class="math inline">\(P(Z=3)\)</span>. Que peut-on remarquer ?</p></li>
-<li><p>Décrire les variations de <span class="math inline">\(P(Z=k)\)</span> en fonction de <span class="math inline">\(k\)</span>.</p></li>
-<li><p>Donner le nombre moyen de pannes et la probabilité qu’il y ait au plus une panne durant cette période.</p></li>
-</ol></li>
-</ol>
-</div>
-</section><section id="exercices-supplémentaires" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="exercices-supplémentaires">Exercices supplémentaires</h2>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 25 </strong></span>Soient <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> deux v.a.r. indépendantes vérifiant:</p>
-<p><span class="math display">\[P(X=n) = P(Y=n) = \frac{1}{4} (\frac{1+a^n}{n!}) \quad \forall n \in \mathbb{N}\]</span></p>
-<ol type="1">
-<li>Déterminer <span class="math inline">\(a\)</span>.</li>
-<li>Calculer <span class="math inline">\(E(X)\)</span> et <span class="math inline">\(E(Y)\)</span>.</li>
-<li>Déterminer la loi de <span class="math inline">\(Z=X+Y\)</span>.</li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 26 </strong></span>Soit <span class="math inline">\((X,Z)\)</span> un couple de variables aléatoires à valeurs dans <span class="math inline">\(\mathbb{N}\)</span>. On pose</p>
-<p><span class="math display">\[p_{k,n} = P(X=k,Z=n)= \frac{\lambda^n e^{-\lambda} \alpha^k (1-\alpha)^{n-k}}{k! (n-k)!}
-\times {1}_{\{0\leq k\leq n\}}\]</span></p>
-<ol type="1">
-<li>Calculer et reconnaitre la loi de <span class="math inline">\(Z\)</span>. Donner l’espérance de <span class="math inline">\(Z\)</span>.</li>
-<li>Calculer et reconnaitre la loi de <span class="math inline">\(X\)</span>.</li>
-<li>Calculer <span class="math inline">\(P(X=k | Z=n)\)</span> et reconnaitre la loi.</li>
-<li>On fait l’hypothèse que <span class="math inline">\(Z\)</span> est le nombre d’enfants d’une famille, <span class="math inline">\(X\)</span> le nombre de garçons et la probabilité qu’un enfant est un garçon est <span class="math inline">\(0.53\)</span>. Soit <span class="math inline">\(Y\)</span> le nombre de filles dans la famille. Calculer et reconnaitre la loi de <span class="math inline">\(Y\)</span>.</li>
-<li>Interpréter les résultats trouvés. Est ce par hasard qu’on reconnait ces lois?</li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 27 </strong></span>Un joueur dispose d’un dé et d’une pièce. Le dé est équilibré et la pièce a une probabilité <span class="math inline">\(p\)</span> (<span class="math inline">\(0 &lt; p &lt; 1\)</span>) de tomber sur pile. On note <span class="math inline">\(q=1-p\)</span>. Le joueur lance d’abord le dé, puis lance la pièce autant de fois que le résultat du dé. Il compte enfin le nombre de piles obtenu au cours des lancers. Les résultats de chaque lancer sont indépendants.</p>
-<p>On note <span class="math inline">\(X\)</span> la variable aléatoire correspondant à la valeur du dé et <span class="math inline">\(Y\)</span> celle correspondant au nombre de piles obtenus à la fin du jeu.</p>
-<ol type="1">
-<li>Soit <span class="math inline">\((i,j) \, \in \, \{1,\ldots,6\} \times \{0,\ldots,6\}\)</span>. Que vaut <span class="math inline">\(P(Y=j|X=i)\)</span>.</li>
-<li>Déterminer la loi du couple <span class="math inline">\((X,Y)\)</span>.</li>
-<li>Calculer <span class="math inline">\(P(Y=6)\)</span>.</li>
-<li>Montrer que <span class="math display">\[P(Y=0)= \frac{q}{6} \big(\frac{1-q^6}{1-q}\big)\]</span> <strong>Rappel</strong>: <span class="math inline">\(\displaystyle \sum_{i=0}^{n} x^i = \frac{1-x^{n+1}}{1-x}\)</span> si <span class="math inline">\(x\neq 1\)</span>.</li>
-<li>Sachant que l’on a obtenu aucun pile au cours du jeu, quelle était la probabilité que le résultat du dé était <span class="math inline">\(1\)</span>? Évaluer cette quantité quand <span class="math inline">\(p=q=\frac{1}{2}\)</span>.</li>
-</ol>
-</div>
+<!-- 
+
+## Lois usuelles discrètes {-}
+
+::: {#exr-}
+Une urne contient 2 boules de numéro 20, 4 boules de numéro 10 et 4
+boules de numéro 5.
+
+1.  Une épreuve consiste à tirer simultanément 3 boules de l’urne.
+    Calculer la probabilité $p$ que la somme des numéros tirés soit
+    égale à 30.
+
+2.  On répéte cette épreuve 4 fois en remettant à chaque fois les trois
+    boules tirés dans l’urne. Soit $X$ la v.a. indiquant le nombre de
+    tirages donnant une somme de numéros égale à 30.
+
+    1.  Quelle la loi de $X$. Donner son espérance et son écart-type.
+
+    2.  Déterminer la probabilité d’avoir au moins une fois la somme 30
+        dans les 4 tirages.
+
+:::
+
+
+::: {#exr-}
+Vous avez besoin d’une personne pour vous aider à déménager. Quand vous
+téléphonez à un ami, il y a une chance sur quatre qu’il accepte. Soit
+$X$ la variable aléatoire qui représente le nombre d’amis que vous
+devrez contacter pour obtenir cette aide.
+
+1.  Déterminer la loi de probabilité de $X$.
+
+2.  Calculer $P(X\leq 3)$.
+
+3.  Calculer $E(X)$.
+
+:::
+
+
+::: {#exr-}
+Pour être sélectionné aux jeux olympiques, un athlète doit réussir deux
+fois à dépasser les minima fixés par sa fédération. Il a une chance sur
+trois de réussir à chaque épreuve à laquelle il participe. On note $X$
+la variable aléatoire qui représente le nombre d’épreuves auxquelles il
+devra participer pour être sélectionné.
+
+1.  Déterminer la loi de probabilité de $X$.
+
+2.  Si cet athlète ne peut participer qu’à quatre épreuves maximum,
+    quelle est la probabilité qu’il soit sélectionné ?
+
+:::
+
+
+::: {#exr-}
+Un sac contient cinq jetons : deux sont numérotés 1 et les trois autres
+sont numérotés 2. On effectue une série illimitée de tirages avec remise
+d’un jeton dans le sac S. On désigne par $Y$ la variable aléatoire égale
+au nombre de tirages effectués avant le tirage amenant un jeton numéroté
+1 pour la première fois.
+
+1.  1.  Justifier que la variable aléatoire $Z=Y+1$ suit une loi usuelle
+        que l’on précisera.
+
+    2.  En déduire la loi de probabilité de $Y$.
+
+2.  1.  Préciser l’espérance mathématique et la variance de $Z$.
+
+    2.  En déduire l’espérance mathématique et la variance de $Y$.
+
+:::
+
+
+::: {#exr-}
+Le nombre de pannes d’électricité qui se produisent dans une certaine
+région au cours d’une période d’un an suit une loi de Poisson de
+paramètre $\lambda=3$.
+
+1.  Calculer la probabilité qu’au cours d’une période d’un an il y a
+    exactement une panne qui se produit.
+
+2.  En supposant l’indépendance des pannes d’une année à l’autre,
+    calculer la probabilité qu’au cours des dix prochaines années il y
+    ait au moins une année pendant laquelle il se produira exactement
+    une panne.
+
+:::
+
+
+::: {#exr-}
+Un poste de radio a 2 types de pannes: transistor ou condensateur.
+Durant la première année d’utilisation, on désigne par:
+
+$X=$ nombre de pannes dues à une défaillance de transistor.\
+$Y=$ nombre de pannes dues à une défaillance de condensateur.
+
+On suppose que $X$ et $Y$ sont des v.a. indépendantes suivant des lois
+de Poisson de paramètres respectives $\lambda=2$ et $\mu=1$.
+
+1.  Calculer la probabilité qu’il y ait 2 pannes dues à une défaillance
+    de transistor.
+
+2.  Calculer la probabilité qu’il y ait au moins une panne due à une
+    défaillance de condensateur.
+
+3.  1.  Quelle est la loi du nombre $Z=X+Y$ de pannes durant la première
+        année ?
+
+    2.  Déterminer la probabilité qu’il y ait 2 pannes de type
+        quelconque.
+
+    3.  Calculer $P(Z=3)$. Que peut-on remarquer ?
+
+    4.  Décrire les variations de $P(Z=k)$ en fonction de $k$.
+
+    5.  Donner le nombre moyen de pannes et la probabilité qu’il y ait
+        au plus une panne durant cette période.
+
+:::
+
+## Exercices supplémentaires {-}
+
+::: {#exr-}
+Soient $X$ et $Y$ deux v.a.r. indépendantes vérifiant:
+
+$$P(X=n) = P(Y=n) = \frac{1}{4} (\frac{1+a^n}{n!}) \quad \forall n \in \mathbb{N}$$
+
+1.  Déterminer $a$.
+2.  Calculer $E(X)$ et $E(Y)$.
+3.  Déterminer la loi de $Z=X+Y$.
+:::
+
+::: {#exr-}
+Soit $(X,Z)$ un couple de variables aléatoires à valeurs dans $\mathbb{N}$. On pose
+
+$$p_{k,n} = P(X=k,Z=n)= \frac{\lambda^n e^{-\lambda} \alpha^k (1-\alpha)^{n-k}}{k! (n-k)!}
+ \times {1}_{\{0\leq k\leq n\}}$$
+
+1.  Calculer et reconnaitre la loi de $Z$. Donner l'espérance de $Z$.
+2.  Calculer et reconnaitre la loi de $X$.
+3.  Calculer $P(X=k | Z=n)$ et reconnaitre la loi.
+4.  On fait l'hypothèse que $Z$ est le nombre d'enfants d'une famille, $X$ le nombre de garçons et la probabilité qu'un enfant est un garçon est $0.53$. Soit $Y$ le nombre de filles dans la famille. Calculer et reconnaitre la loi de $Y$.
+5.  Interpréter les résultats trouvés. Est ce par hasard qu'on reconnait ces lois?
+:::
+
+::: {#exr-}
+Un joueur dispose d'un dé et d'une pièce. Le dé est équilibré et la pièce a une probabilité $p$ ($0 < p < 1$) de tomber sur pile. On note $q=1-p$. Le joueur lance d'abord le dé, puis lance la pièce autant de fois que le résultat du dé. Il compte enfin le nombre de piles obtenu au cours des lancers. Les résultats de chaque lancer sont indépendants. 
+
+On note $X$ la variable aléatoire correspondant à la valeur du dé et $Y$ celle correspondant au nombre de piles obtenus à la fin du jeu.
+
+
+1. Soit $(i,j) \, \in \, \{1,\ldots,6\} \times \{0,\ldots,6\}$. Que vaut $P(Y=j|X=i)$.
+2. Déterminer la loi du couple $(X,Y)$.
+3. Calculer $P(Y=6)$.
+4. Montrer que $$P(Y=0)= \frac{q}{6} \big(\frac{1-q^6}{1-q}\big)$$
+  **Rappel**: $\displaystyle \sum_{i=0}^{n} x^i = \frac{1-x^{n+1}}{1-x}$ si $x\neq 1$. 
+5. Sachant que l'on a obtenu aucun pile au cours du jeu, quelle était la probabilité que le résultat du dé était $1$? Évaluer cette quantité quand $p=q=\frac{1}{2}$.
+::: -->
 
 
 </section></main><!-- /main --><script id="quarto-html-after-body" type="application/javascript">
