--- a/courses/MDSEfreiS7/materials.html
+++ b/courses/MDSEfreiS7/materials.html
@@ -116,7 +116,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./materials.html" class="sidebar-item-text sidebar-link active">Course materials</a>
+  <a href="./materials.html" class="sidebar-item-text sidebar-link active">Course readings</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -164,7 +164,14 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#applied-statistics-and-probability-for-engineers" id="toc-applied-statistics-and-probability-for-engineers" class="nav-link active" data-scroll-target="#applied-statistics-and-probability-for-engineers">Applied statistics and probability for engineers</a></li>
+  <li><a href="#introduction-to-probability-for-data-science" id="toc-introduction-to-probability-for-data-science" class="nav-link" data-scroll-target="#introduction-to-probability-for-data-science">Introduction to Probability for Data Science</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
@@ -185,8 +192,29 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<p>Two books are recommended to read:</p>
+<div class="quarto-layout-panel">
+<div class="quarto-layout-row quarto-layout-valign-top">
+<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
+<p><img src="img/Montgomery.png" class="img-fluid"></p>
+</div>
+<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
+<p><img src="img/Chan.png" class="img-fluid"></p>
+</div>
+</div>
+</div>
+<section id="applied-statistics-and-probability-for-engineers" class="level2">
+<h2 class="anchored" data-anchor-id="applied-statistics-and-probability-for-engineers">Applied statistics and probability for engineers</h2>
+<p>Montgomery, D. C., &amp; Runger, G. C. (2010). Applied statistics and probability for engineers. John wiley &amp; sons.</p>
+<p>Downloadable from <a href="../Applied-Statistics-and-Probability-for-Engineers-Douglas-C.-Montgomery-George-C.-Runger-Edisi-5-2011.pdf" target="_blank">Here 📖</a>.</p>
+</section>
+<section id="introduction-to-probability-for-data-science" class="level2">
+<h2 class="anchored" data-anchor-id="introduction-to-probability-for-data-science">Introduction to Probability for Data Science</h2>
+<p>Chan, H. S. (2021). Introduction to Probability for Data Science.</p>
+<p>Downloadable from <a href="../PDS_Shan.pdf" target="_blank">Here 📖</a>.</p>
 
 
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
