--- a/courses/MDSEfreiS7/td1.html
+++ b/courses/MDSEfreiS7/td1.html
@@ -156,7 +156,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#bayes" id="toc-bayes" class="nav-link" data-scroll-target="#bayes">Bayes</a></li>
   <li><a href="#discrete-random-variables" id="toc-discrete-random-variables" class="nav-link" data-scroll-target="#discrete-random-variables">Discrete random variables</a></li>
   <li><a href="#lois-usuelles-discr%C3%A8tes" id="toc-lois-usuelles-discrètes" class="nav-link" data-scroll-target="#lois-usuelles-discr%C3%A8tes">Lois usuelles discrètes</a></li>
-  <li><a href="#variables-al%C3%A9toires-continues" id="toc-variables-alétoires-continues" class="nav-link" data-scroll-target="#variables-al%C3%A9toires-continues">Variables alétoires continues</a></li>
+  <li><a href="#continuous-random-variables" id="toc-continuous-random-variables" class="nav-link" data-scroll-target="#continuous-random-variables">Continuous Random Variables</a></li>
   </ul></nav>
     </div>
 <!-- main -->
@@ -308,55 +308,56 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </section><section id="lois-usuelles-discrètes" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="lois-usuelles-discrètes">Lois usuelles discrètes</h2>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.10 </strong></span>Une urne contient 2 boules de numéro 20, 4 boules de numéro 10 et 4 boules de numéro 5.</p>
+<p><span class="theorem-title"><strong>Exercise 1.10 </strong></span>An urn contains 2 balls with number 20, 4 balls with number 10 and 4 balls with number 5.</p>
 <ol type="1">
-<li><p>Une épreuve consiste à tirer simultanément 3 boules de l’urne. Calculer la probabilité <span class="math inline">\(p\)</span> que la somme des numéros tirés soit égale à 30.</p></li>
+<li><p>An experiment consists in drawing simultaneously 3 balls from the urn. Calculate probability p so that the sum of the numbers drawn is equal to 30.</p></li>
 <li>
-<p>On répéte cette épreuve 4 fois en remettant à chaque fois les trois boules tirés dans l’urne. Soit <span class="math inline">\(X\)</span> la v.a. indiquant le nombre de tirages donnant une somme de numéros égale à 30.</p>
+<p>This experiment is repeated 4 times, each time putting the three balls drawn back into the urn. Let <span class="math inline">\(X\)</span> be the random variabler indicating the number of draws giving a sum of numbers equal to 30.</p>
 <ol type="1">
-<li><p>Quelle la loi de <span class="math inline">\(X\)</span>. Donner son espérance et son écart-type.</p></li>
-<li><p>Déterminer la probabilité d’avoir au moins une fois la somme 30 dans les 4 tirages.</p></li>
+<li><p>What is the probability law of <span class="math inline">\(X\)</span>. Give its expected and standard deviation.</p></li>
+<li><p>Calculate the probability of having at least once the sum 30 out of 4 draws.</p></li>
 </ol>
 </li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.11 </strong></span>Vous avez besoin d’une personne pour vous aider à déménager. Quand vous téléphonez à un ami, il y a une chance sur quatre qu’il accepte. Soit <span class="math inline">\(X\)</span> la variable aléatoire qui représente le nombre d’amis que vous devrez contacter pour obtenir cette aide.</p>
+<p><span class="theorem-title"><strong>Exercise 1.11 </strong></span>You need someone to help you move. When you call a friend, there’s a one out of four chances he will accept. Let <span class="math inline">\(X\)</span> be the random variable that represents the number of friends you will need to contact to get this help.</p>
 <ol type="1">
-<li><p>Déterminer la loi de probabilité de <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(P(X\leq 3)\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(E(X)\)</span>.</p></li>
+<li><p>Determine the probability distribution of <span class="math inline">\(X\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(P(X\leq 3)\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span>.</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.12 </strong></span>Le nombre de pannes d’électricité qui se produisent dans une certaine région au cours d’une période d’un an suit une loi de Poisson de paramètre <span class="math inline">\(\lambda=3\)</span>.</p>
+<p><span class="theorem-title"><strong>Exercise 1.12 </strong></span>The number of power outages that occur in a certain region over a one-year timeframe follows a Poisson distribution of parameter <span class="math inline">\(\lambda=3\)</span>.</p>
 <ol type="1">
-<li><p>Calculer la probabilité qu’au cours d’une période d’un an il y a exactement une panne qui se produit.</p></li>
-<li><p>En supposant l’indépendance des pannes d’une année à l’autre, calculer la probabilité qu’au cours des dix prochaines années il y ait au moins une année pendant laquelle il se produira exactement une panne.</p></li>
+<li><p>Calculate the probability that within a period of one year one failure occurs exactly.</p></li>
+<li><p>Assuming there is an independence of outages from one year to another, calculate the probability that in the upcoming ten years there will be at least one year in which exactly one failure occurs.</p></li>
 </ol>
 </div>
-</section><section id="variables-alétoires-continues" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="variables-alétoires-continues">Variables alétoires continues</h2>
+</section><section id="continuous-random-variables" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="continuous-random-variables">Continuous Random Variables</h2>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.13 </strong></span>Soit <span class="math inline">\(X\)</span> une v.a.c. de densité <span class="math inline">\(f\)</span> définie par: <span class="math inline">\(f(x) = k x \times {1}_{]0,2[} (x)\)</span>.</p>
+<p><span class="theorem-title"><strong>Exercise 1.13 </strong></span>Let <span class="math inline">\(X\)</span> a random variable of density <span class="math inline">\(f\)</span> defined by: <span class="math inline">\(f(x) = k x \times {1}_{]0,2[} (x)\)</span>.</p>
 <ol type="1">
-<li><p>Déterminer la constante <span class="math inline">\(k\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(E(X)\)</span> et <span class="math inline">\(E(X^2)\)</span>.</p></li>
-<li><p>On pose <span class="math inline">\(Z=X^2\)</span>. Déterminer la densité de <span class="math inline">\(Z\)</span>. Calculer <span class="math inline">\(E(Z)\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(k\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(E(X^2)\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(Z=X^2\)</span>. Determine the density function of <span class="math inline">\(Z\)</span> and calculate <span class="math inline">\(E(Z)\)</span>.</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.14 </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire continue dont la fonction de densité est donnée par: <span class="math display">\[f(x)= \left\lbrace
+<p><span class="theorem-title"><strong>Exercise 1.14 </strong></span>Let <span class="math inline">\(X\)</span> a random variable of density function:</p>
+<p><span class="math display">\[f(x)= \left\lbrace
       \begin{array}{ll}
       0  &amp; \mbox{si} \quad |x| &gt; k &gt; 0\\
       x+1 &amp; \mbox{si} \quad |x| \le k
       \end{array}
   \right.\]</span></p>
 <ol type="1">
-<li><p>Déterminer <span class="math inline">\(k\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(E(X)\)</span> et <span class="math inline">\(E(X^2)\)</span>.</p></li>
-<li><p>Déterminer la fonction de répartition de <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Soit <span class="math inline">\(Y=X^2\)</span>. Déterminer la fonction de répartition ainsi que la fonction de densité de <span class="math inline">\(Y\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(E(Y)\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(k\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(E(X^2)\)</span>.</p></li>
+<li><p>Determine the distribution function of <span class="math inline">\(X\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(Y=X^2\)</span>. Determine the probability distribution of <span class="math inline">\(Y\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(Y)\)</span>.</p></li>
 </ol>
 </div>
 
