--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -117,7 +117,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course materials</a>
+  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course readings</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -484,7 +484,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
   <div class="nav-page nav-page-next">
       <a href="./materials.html" class="pagination-link">
-        <span class="nav-page-text">Course materials</span> <i class="bi bi-arrow-right-short"></i>
+        <span class="nav-page-text">Course readings</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
