--- a/courses/MDSEfreiS7/td1.html
+++ b/courses/MDSEfreiS7/td1.html
@@ -101,7 +101,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course materials</a>
+  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course readings</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -634,7 +634,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script><nav class="page-navigation"><div class="nav-page nav-page-previous">
       <a href="./materials.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Course materials</span>
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Course readings</span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
