--- a/courses/MDSEfreiS7/td3.html
+++ b/courses/MDSEfreiS7/td3.html
@@ -116,7 +116,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course materials</a>
+  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course readings</a>
   </div>
 </li>
         <li class="sidebar-item">
