--- a/courses/ProbasEfreiS3/exos1_en.html
+++ b/courses/ProbasEfreiS3/exos1_en.html
@@ -383,7 +383,7 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 17 </strong></span>Let X and Y be discrete random variables whose joined distribution is given by the following table:</p>
+<p><span class="theorem-title"><strong>Exercice 17 </strong></span>Let X and Y be discrete random variables whose joint distribution is given by the following table:</p>
 <table class="table">
 <thead><tr class="header">
 <th style="text-align: center;">
