--- a/courses/ProbasEfreiS3/index.html
+++ b/courses/ProbasEfreiS3/index.html
@@ -230,6 +230,7 @@ ul.task-list li input[type="checkbox"] {
 <th style="text-align: center;">Document</th>
 <th style="text-align: center;">Slides [Fr]</th>
 <th>Slides [En]</th>
+<th>Annotated Slides</th>
 <th>Exercices [Fr]</th>
 <th>Exercices [En]</th>
 </tr>
@@ -241,6 +242,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;"><a href="variables-aleatoires-discretes.html">📖</a></td>
 <td style="text-align: center;"><a href="latex/slides_va_discretes_fr.pdf">📋</a></td>
 <td><a href="latex/slides_va_discretes_en.pdf">📋</a></td>
+<td><a href="latex/slides_va_discretes_en_amphi_annotated.pdf">📋✍️</a></td>
 <td></td>
 <td></td>
 </tr>
@@ -252,12 +254,14 @@ ul.task-list li input[type="checkbox"] {
 <td><a href="latex/slides_lois_discretes_en.pdf">📋</a></td>
 <td></td>
 <td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;"></td>
 <td>Feuille d’exercices 1</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
+<td></td>
 <td></td>
 <td><a href="exos1.html">✍️</a></td>
 <td><a href="exos1_en.html">✍️</a></td>
@@ -270,6 +274,7 @@ ul.task-list li input[type="checkbox"] {
 <td><a href="latex/slides_va_continues_en.pdf">📋</a></td>
 <td></td>
 <td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">4</td>
@@ -279,12 +284,14 @@ ul.task-list li input[type="checkbox"] {
 <td><a href="latex/slides_lois_continues_en.pdf">📋</a></td>
 <td></td>
 <td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;"></td>
 <td>Feuille d’exercices 2</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
+<td></td>
 <td></td>
 <td><a href="exos2.html">✍️</a></td>
 <td><a href="exos2_en.html">✍️</a></td>
