--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -227,7 +227,7 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td style="text-align: center;">1</td>
 <td>Random Variables</td>
-<td><a href="Slides/lecture1.pdf">📖</a></td>
+<td><a href="Slides/Lecture1_random_variables.pdf">📖</a></td>
 <td style="text-align: center;"><a href="td1.html">✍️</a></td>
 </tr>
 <tr class="even">
