--- a/courses/MDSEfreiS7/materials.html
+++ b/courses/MDSEfreiS7/materials.html
@@ -206,12 +206,12 @@ ul.task-list li input[type="checkbox"] {
 <section id="applied-statistics-and-probability-for-engineers" class="level2">
 <h2 class="anchored" data-anchor-id="applied-statistics-and-probability-for-engineers">Applied statistics and probability for engineers</h2>
 <p>Montgomery, D. C., &amp; Runger, G. C. (2010). Applied statistics and probability for engineers. John wiley &amp; sons.</p>
-<p>Downloadable from <a href="../Applied-Statistics-and-Probability-for-Engineers-Douglas-C.-Montgomery-George-C.-Runger-Edisi-5-2011.pdf" target="_blank">Here 📖</a>.</p>
+<p>Downloadable from <a href="books/Applied-Statistics-and-Probability-for-Engineers-Douglas-C.-Montgomery-George-C.-Runger-Edisi-5-2011.pdf" target="_blank">Here 📖</a>.</p>
 </section>
 <section id="introduction-to-probability-for-data-science" class="level2">
 <h2 class="anchored" data-anchor-id="introduction-to-probability-for-data-science">Introduction to Probability for Data Science</h2>
 <p>Chan, H. S. (2021). Introduction to Probability for Data Science.</p>
-<p>Downloadable from <a href="../PDS_Shan.pdf" target="_blank">Here 📖</a>.</p>
+<p>Downloadable from <a href="books/PDS_Shan.pdf" target="_blank">Here 📖</a>.</p>
 
 
 </section>
