--- a/courses/ProbasEfreiS3/exos1.html
+++ b/courses/ProbasEfreiS3/exos1.html
@@ -288,6 +288,7 @@ ul.task-list li input[type="checkbox"] {
 <ol type="1">
 <li><p>Sachant que ce vaccin a été administré à 680 femmes enceintes, quelle est la probabilité qu’une femme enceinte ait eu ne réaction secondaire si elle reçoit le vaccin?</p></li>
 <li><p>Quelle est la probabilité qu’une personne non enceinte ait une réaction secondaire ?</p></li>
+<li><p>Une personne a présonté des réactions secondaire, quelle est la probabilité qu’il s’agit d’une femme enceinte?</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
