--- a/courses/ProbasEfreiS3/exos1_en.html
+++ b/courses/ProbasEfreiS3/exos1_en.html
@@ -288,6 +288,7 @@ ul.task-list li input[type="checkbox"] {
 <ol type="1">
 <li><p>Knowing that this vaccine was administered to 680 pregnant women, what is the probability that a pregnant woman will have a secondary reaction if she receives the vaccine?</p></li>
 <li><p>What is the probability that a non-pregnant person would have a secondary reaction?</p></li>
+<li><p>A persone had adverse reactions. What is the probability that this person is a pregnant woman?</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
