--- a/courses/MDSEfreiS7/td1.html
+++ b/courses/MDSEfreiS7/td1.html
@@ -238,6 +238,22 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p>We suppose that we draw without replacement. Calculate the following probabilities: <span class="math inline">\(P(E \cap F), P_F (E), P_E(F)\)</span>. Are the events E and F independent?</p>
 </div>
+<div class="callout-important callout callout-style-default no-icon callout-captioned">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-1-contents" aria-controls="callout-1" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Solution
+</div>
+<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
+</div>
+<div id="callout-1" class="callout-1-contents callout-collapse collapse">
+<div class="callout-body-container callout-body">
+
+</div>
+</div>
+</div>
 </section><section id="bayes" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="bayes">Bayes</h2>
 <div id="exr-" class="theorem exercise">
 <div class="cell">
