--- a/courses/ProbasEfreiS3/exos1_en.html
+++ b/courses/ProbasEfreiS3/exos1_en.html
@@ -251,7 +251,7 @@ ul.task-list li input[type="checkbox"] {
 <p><span class="theorem-title"><strong>Exercice 7 </strong></span>Let <span class="math inline">\((\Omega,\mathcal{A},P)\)</span> a probability space. Let <span class="math inline">\(A\)</span>,<span class="math inline">\(B\)</span> et <span class="math inline">\(C\)</span> three events. Let: <span class="math inline">\(E = A \cap \bar{B} \cap \bar{C}\)</span> and <span class="math inline">\(F = A \cap (B \cup C)\)</span>.</p>
 <ol type="1">
 <li><p>Show that <span class="math inline">\(E\)</span> and <span class="math inline">\(F\)</span> are mutually exclusive.</p></li>
-<li><p>Show that <span class="math inline">\(E\)</span> and <span class="math inline">\(F\)</span> are mutually exclusive.</p></li>
+<li><p>Show that <span class="math inline">\(E \cup F = A\)</span>.</p></li>
 <li><p>Knowing that <span class="math inline">\(P(A)=0.6; P(A\cap B)=0.2; P(A\cap C)=0.1\)</span> and <span class="math inline">\(P(A\cap B \cap C)=0.05\)</span>: Compute <span class="math inline">\(P(F)\)</span> and <span class="math inline">\(P(E)\)</span>.</p></li>
 </ol>
 </div>
